# Mosaic-Engine

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  install-debug.sh  install-release.sh  vcpkg.json
cmake/: MosaicConfig.cmake.in
include/Mosaic/: Mosaic.hpp
include/Mosaic/Application/: Application.hpp  Instance.hpp  Resources.hpp
include/Mosaic/Console/: Console.hpp
include/Mosaic/Containers/: BitsetTree.hpp  SparseSet.hpp
include/Mosaic/Debug/: Console.hpp  Profiler.hpp
include/Mosaic/Debug/Console/: Enums.hpp  Handle.hpp  Resource.hpp  Severity.hpp  Strings.hpp
include/Mosaic/ECS/: Archetype.hpp  ECS.hpp  ECSDescriptor.hpp  ECSManager.hpp  ECSView.hpp  Entity.hpp  EntityManager.hpp  EntityView.hpp  EventManager.hpp  SparseSet.hpp
include/Mosaic/Inline/Application/: Instance.inl
include/Mosaic/Inline/Console/: Console.inl
include/Mosaic/Inline/Containers/: BitsetTree.inl  SparseSet.inl
include/Mosaic/Inline/Debug/: Console.inl
include/Mosaic/Inline/ECS/: ECS.inl  ECSManager.inl  ECSView.inl  EntityManager.inl  EntityView.inl  EventManager.inl  SparseSet.inl
include/Mosaic/Inline/Renderer/Resources/: Mesh.inl
include/Mosaic/Inline/Rendering/Mesh/: Descriptor.inl  Mesh.inl
include/Mosaic/Inline/Systems/ECS/: ArchetypeTree.inl  EntityView.inl  Registry.inl  SparseSet.inl
include/Mosaic/Inline/Utilities/Terminal/: Input.inl  Logging.inl  Output.inl
include/Mosaic/Macros/: EntryPoint.hpp  Exposure.hpp  Main.hpp  PID.hpp  SymbolExposure.hpp  Symbols.hpp
include/Mosaic/Renderer/: Renderer.hpp
include/Mosaic/Renderer/Backends/: OpenGL.hpp
include/Mosaic/Renderer/Resources/: Mesh.hpp
include/Mosaic/Rendering/: Component.hpp  Renderer.hpp
include/Mosaic/Rendering/Instance/: Backend.hpp  Events.hpp  Renderer.hpp
include/Mosaic/Rendering/Instance/Backends/: OpenGL.hpp
include/Mosaic/Rendering/Mesh/: Attribute.hpp  Attributes.hpp  Descriptor.hpp  Flags.hpp  Mesh.hpp  Resource.hpp  Scalar.hpp  Semantic.hpp  Validation.hpp
include/Mosaic/Rendering/New/: Renderer.hpp
include/Mosaic/Systems/ECS/: Archetype.hpp  ArchetypeTree.hpp  ComponentTypes.hpp  Entity.hpp  EntityView.hpp  NodePool.hpp  Registry.hpp  SparseSet.hpp
include/Mosaic/Types/Constraints/: Support.hpp
include/Mosaic/Types/Reflection/: TypeInfo.hpp  TypeTraits.hpp
include/Mosaic/Utilities/: Enumerator.hpp
include/Mosaic/Utilities/Terminal/: Input.hpp  Logging.hpp  Output.hpp
include/Mosaic/Window/: Backend.hpp  Component.hpp  Events.hpp  Resources.hpp  Window.hpp
include/Mosaic/Window/Backends/: GLFW.hpp
include/backend/: inputs.hpp  window.hpp
include/backend/rendering/: renderer.hpp
include/backend/windows/: glfw.hpp
include/frontend/: components.hpp  contexts.hpp  events.hpp  graphs.hpp  inputs.hpp  instance.hpp  logging.hpp  main.hpp  registry.hpp  renderer.hpp  targets.hpp  window.hpp
include/frontend/rendering/: graphs.hpp  targets.hpp
include/mosaic/api/: main.hpp
include/mosaic/application/: application.hpp  instance.hpp  resources.hpp
include/mosaic/debug/: console.hpp
include/mosaic/ecs/: entity.hpp  manager.hpp  set.hpp  view.hpp
include/mosaic/events/: manager.hpp
include/mosaic/inline/application/: instance.inl
include/mosaic/inline/debug/: console.inl
include/mosaic/inline/ecs/: manager.inl  set.inl  view.inl
include/mosaic/inline/events/: manager.inl
include/mosaic/window/: resources.hpp  window.hpp
include/systems/: components.hpp  contexts.hpp  events.hpp  graphs.hpp  inputs.hpp  instance.hpp  main.hpp  renderer.hpp  targets.hpp  window.hpp
include/utilities/: logging.hpp  toml.hpp
interface/: Component.hpp  Mosaic.hpp
old/include/application/: application.hpp  components.hpp  console.hpp  contexts.hpp  events.hpp  input.hpp  instance.hpp  window.hpp
old/include/rendering/: commands.hpp  graph.hpp  mesh.hpp  pass.hpp  pipeline.hpp  renderer.hpp  target.hpp
old/include/rendering/opengl/: renderer.hpp
old/include/rendering/vulkan/: commands.hpp  devices.hpp  instance.hpp  queues.hpp  renderer.hpp  surface.hpp  swapchain.hpp
old/include/utilities/: config.hpp  numerics.hpp  rect.hpp  typeinfo.hpp  vector.hpp
old/inline/application/: console.inl  events.inl
old/inline/rendering/: mesh.inl
old/inline/utilities/: config.inl  vector.inl
old/interface/: Component.hpp  Program.hpp
old/source/application/: application.cpp  components.cpp  console.cpp  events.cpp  input.cpp  window.cpp
old/source/rendering/: commands.cpp  mesh.cpp  renderer.cpp  target.cpp
old/source/rendering/opengl/: renderer.cpp
old/source/rendering/vulkan/: commands.cpp  devices.cpp  instance.cpp  queues.cpp  renderer.cpp  surface.cpp  swapchain.cpp
old/source/utilities/: config.cpp
scripts/: install-debug.sh  install-release.sh
scripts/unix/: install-debug.sh  install-release.sh
scripts/windows/: install-debug.bat  install-release.bat
source/Application/: Application.cpp  Instance.cpp  Resources.cpp
source/Debug/: Console.cpp
source/Debug/Console/: Resource.cpp
source/ECS/: ECSManager.cpp  Entity.cpp  EntityManager.cpp  EventManager.cpp
source/Mosaic/Application/: Application.cpp
source/Mosaic/Console/: Console.cpp
source/Mosaic/ECS/: Archetype.cpp
source/Mosaic/Systems/ECS/: Archetype.cpp  NodePool.cpp
source/Renderer/: Backend.cpp  Renderer.cpp
source/Renderer/Backends/: OpenGL.cpp
source/Window/: Backend.cpp  Resources.cpp  Window.cpp
source/Window/Backends/: GLFW.cpp
source/application/: application.cpp  resources.cpp
source/backend/windows/: glfw.cpp
source/debug/: console.cpp
source/ecs/: entity.cpp  manager.cpp
source/events/: manager.cpp
source/frontend/: components.cpp  contexts.cpp  events.cpp  inputs.cpp  instance.cpp  renderer.cpp  window.cpp
source/systems/: components.cpp  contexts.cpp  events.cpp  inputs.cpp  instance.cpp  renderer.cpp  window.cpp
source/utilities/: toml.cpp
source/window/: resources.cpp  window.cpp
source/window/backends/: glfw.cpp
